// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details Panel Component DetailsPanel: rendering it should not render the DetailsPanel if an expanded detail with a panelView, but not params have been set: 
        <DetailsPanel
          browserFields={Object {}}
          handleOnPanelClosed={[MockFunction]}
          isFlyoutView={false}
          runtimeMappings={Object {}}
          tabType="query"
          scopeId="timeline-test"
        />
       1`] = `
<DetailsPanel
  browserFields={Object {}}
  handleOnPanelClosed={[MockFunction]}
  isFlyoutView={false}
  runtimeMappings={Object {}}
  scopeId="timeline-test"
  tabType="query"
/>
`;

exports[`Details Panel Component DetailsPanel: rendering it should not render the DetailsPanel if no expanded detail has been set in the reducer 1`] = `
<DetailsPanel
  browserFields={Object {}}
  handleOnPanelClosed={[MockFunction]}
  isFlyoutView={false}
  runtimeMappings={Object {}}
  scopeId="timeline-test"
  tabType="query"
/>
`;

exports[`Details Panel Component DetailsPanel:EventDetails: rendering it should render the Event Details Panel when the panelView is set and the associated params are set 1`] = `
Array [
  .c0 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-top: 8px;
}

<div
    class="euiFlexGroup c0 emotion-euiFlexGroup-responsive-wrap-none-spaceBetween-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    />
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexEnd-column"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <button
            aria-label="close"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />,
  <div
    aria-busy="true"
    data-test-subj="euiSkeletonLoadingAriaWrapper"
  >
    <span
      aria-label="Loading "
      class="euiSkeletonText"
      role="progressbar"
    >
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
      <span
        class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
      />
    </span>
  </div>,
  .c0 .side-panel-flyout-footer {
  background-color: transparent;
}

<div
    class="euiPanel euiPanel--plain euiPanel--paddingMedium c0 emotion-euiPanel-grow-none-m-plain"
  >
    <div
      class="euiFlyoutFooter side-panel-flyout-footer emotion-euiFlyoutFooter"
      data-test-subj="side-panel-flyout-footer"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexEnd-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Details Panel Component DetailsPanel:EventDetails: rendering it should render the Event Details view of the Details Panel in the flyout when the panelView is eventDetail and the eventId is set 1`] = `
.c0 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-top: 8px;
}

.c1 .euiFlyoutBody__overflow {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.c1 .euiFlyoutBody__overflow .euiFlyoutBody__overflowContent {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  padding: 0 12px 12px;
}

.c2 .side-panel-flyout-footer {
  background-color: transparent;
}

<div
  data-eui="EuiFlyout"
  data-test-subj="timeline:details-panel:flyout"
  role="dialog"
>
  <button
    aria-label="Close this dialog"
    data-test-subj="euiFlyoutCloseButton"
    type="button"
  />
  <div
    class="euiFlyoutHeader emotion-euiFlyoutHeader"
  >
    <div
      class="euiFlexGroup c0 emotion-euiFlexGroup-responsive-wrap-none-spaceBetween-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      />
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexEnd-column"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlyoutBody c1 emotion-euiFlyoutBody"
  >
    <div
      class="euiFlyoutBody__overflow emotion-euiFlyoutBody__overflow-noBanner"
      tabindex="0"
    >
      <div
        class="euiFlyoutBody__overflowContent"
      >
        <div
          aria-busy="true"
          data-test-subj="euiSkeletonLoadingAriaWrapper"
        >
          <span
            aria-label="Loading "
            class="euiSkeletonText"
            role="progressbar"
          >
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
            <span
              class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingMedium c2 emotion-euiPanel-grow-none-m-plain"
  >
    <div
      class="euiFlyoutFooter side-panel-flyout-footer emotion-euiFlyoutFooter"
      data-test-subj="side-panel-flyout-footer"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexEnd-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        />
      </div>
    </div>
  </div>
</div>
`;
